Fix field trial DCHECK when gpu process is in-process.

The DCHECK was introduced by my CL here:
https://codereview.chromium.org/2504163005/

In fact, it caught the problem that we were running
the field trial syncer code even when the GPU process
was part of the browser process, which is unneeded.
This change fixes that by not running that code in
that case.

BUG=668217

Review-Url: https://codereview.chromium.org/2525973003
Cr-Commit-Position: refs/heads/master@{#434286}